--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.html",
   "scripts": {
     "start": "node index.html",
-    "dev": "nodemon index.html"
+    "dev": "webpack-dev-server --mode development --open --watch",
+    "build": "rimraf dist && webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -23,7 +24,27 @@
   },
   "homepage": "https://github.com/AlinaAprel/diplom-frontend#readme",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
+    "core-js": "^3.4.1",
+    "jquery": "^3.5.1",
     "node": "^15.4.0",
     "nodemon": "^2.0.6"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.12.10",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "autoprefixer": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "cssnano": "^4.1.10",
+    "gh-pages": "^3.1.0",
+    "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.3",
+    "postcss-loader": "^4.1.0",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "^3.11.1",
+    "webpack-md5-hash": "0.0.6"
   }
 }
