--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "homepage": "https://github.com/AlinaAprel/diplom-frontend",
   "version": "1.0.0",
   "description": "diplom frontend yandex",
-  "main": "src/index.html",
+  "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.html",
     "dev": "webpack-dev-server --mode development --open --watch",
     "build": "rimraf dist && webpack --mode production",
     "deploy": "gh-pages -d dist"
@@ -25,11 +24,8 @@
     "url": "https://github.com/AlinaAprel/diplom-frontend/issues"
   },
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "core-js": "^3.4.1",
-    "jquery": "^3.5.1",
-    "node": "^15.4.0",
-    "nodemon": "^2.0.6"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.10",
@@ -39,9 +35,12 @@
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "cssnano": "^4.1.10",
+    "file-loader": "^6.2.0",
     "gh-pages": "^3.1.0",
     "html-webpack-plugin": "^4.5.0",
+    "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^1.3.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^4.1.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
