--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
     "cssnano": "^4.1.10",
     "file-loader": "^6.2.0",
     "gh-pages": "^3.1.0",
-    "html-webpack-plugin": "^4.5.0",
+    "html-webpack-plugin": "^3.2.0",
     "image-webpack-loader": "^7.0.1",
     "mini-css-extract-plugin": "^1.3.3",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^4.1.0",
+    "url-loader": "^4.1.1",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.1",
